--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gfrasson-ignite-ui/react": "^1.0.1",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.7.1",
+    "@tanstack/react-query": "^5.17.9",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
