--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "googleapis": "^130.0.0",
     "next": "13.3.1",
     "next-auth": "^4.24.5",
     "nookies": "^2.5.2",
