--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^130.0.0",
     "next": "13.3.1",
     "next-auth": "^4.24.5",
+    "next-seo": "^6.4.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
